--- a/src/gpg_urdf/config/bridge_parameters.yaml
+++ b/src/gpg_urdf/config/bridge_parameters.yaml
@@ -10,8 +10,8 @@
   gz_type_name: "gz.msgs.Model"
   direction: GZ_TO_ROS
 
-- ros_topic_name: "odom"
-  gz_topic_name: "odom"
+- ros_topic_name: "odom_gz"
+  gz_topic_name: "odom_gz"
   ros_type_name: "nav_msgs/msg/Odometry"
   gz_type_name: "gz.msgs.Odometry"
   direction: GZ_TO_ROS
@@ -33,3 +33,9 @@
   ros_type_name: "geometry_msgs/msg/Twist"
   gz_type_name: "gz.msgs.Twist"
   direction: ROS_TO_GZ
+
+- ros_topic_name: "/world/default/pose/info"
+  gz_topic_name: "/world/default/pose/info"
+  ros_type_name: "geometry_msgs/msg/PoseArray"
+  gz_type_name: "gz.msgs.Pose_V"
+  direction: GZ_TO_ROS
