--- a/src/gpg_urdf/config/my_controllers.yaml
+++ b/src/gpg_urdf/config/my_controllers.yaml
@@ -11,10 +11,15 @@ controller_manager:
 
 diff_drive_controller:
   ros__parameters:
+    odom_frame_id: odom_gz
+    base_frame_id: base_link
     left_wheel_names: ['left_wheel']
     right_wheel_names: ['right_wheel']
     wheel_separation : 0.15
     wheel_radius : 0.035
+
+    enable_odom_tf: false
+
 
     pose_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
     twist_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
